# numba-template

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pythonpackage.yml
haversine_vectorize.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/my_module/: __init__.py
src/my_numba_package/: haversine.py
src/my_numba_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/test_haversine/: test_haversine.py
