[build-system]
requires = ["setuptools", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "my_numba_package"
description = "My package description"
readme = "README.md"
keywords = ["one", "two"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numba"
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]  
include = ["my_numba_package*"]  
exclude = ["my_package.tests*"]  
namespaces = false

[project.optional-dependencies]
