[build-system]
requires = ["setuptools", "wheel", "pip", "numba"]
build-backend = "setuptools.build_meta"

[project]
name = "my_numba_package"
description = "My package description"
readme = "README.md"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.setuptools.packages.find]
where = ["src"]  
include = ["my_numba_package*"]  
exclude = ["my_package.tests*"]  
namespaces = false
